--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,4 +1,27 @@
 .header {
   display: flex;
   justify-content: space-between;
+  padding: 10px;
+
+  .gameSelect {
+    height: 30px;
+    width: 300px;
+
+    :global(.MuiInputLabel-outlined) {
+      transform: translate(14px, 10px) scale(1);
+    }
+
+    :global(.MuiInputLabel-outlined.MuiInputLabel-shrink) {
+      transform: translate(14px, -6px) scale(0.75);
+    }
+
+    input {
+      padding: 0 !important;
+    }
+  }
+
+  .buttons {
+    display: flex;
+    gap: 8px;
+  }
 }
