--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -4,6 +4,7 @@
   width: 100%;
 
   .appBar {
+    background-color: #801515;
     z-index: 1201;
     transition: width 195ms cubic-bezier(0.4, 0, 0.6, 1) 0ms,
       margin 195ms cubic-bezier(0.4, 0, 0.6, 1) 0ms;
