--- a/src/components/Badges/Badges.module.scss
+++ b/src/components/Badges/Badges.module.scss
@@ -11,10 +11,30 @@
     flex: 1;
     gap: 5px;
     filter: grayscale(1.1);
-    background-color: #ffaca8;
+    background-color: #d46a6a;
     padding: 10px;
+    border: none;
     border-right: 1px solid #ffffff;
-    border-radius: 2px;
+    border-radius: 3px;
+    box-shadow: 0 0 4px #999;
+    font: inherit;
+    color: white;
+    transition: background 0.8s;
+    cursor: pointer;
+
+    &:active {
+      background-color: #ffaaaa;
+      background-size: 100%;
+      transition: background 0s;
+    }
+
+    &.active {
+      filter: unset;
+    }
+
+    &:hover {
+      filter: unset;
+    }
 
     &:last-child {
       border-right: none;
