--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,6 @@
+/* CSS Reset */
+@import-normalize;
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu',
