--- a/src/components/Pokemon/Pokemon.module.scss
+++ b/src/components/Pokemon/Pokemon.module.scss
@@ -18,4 +18,15 @@
     display: flex !important;
     align-items: center;
   }
+
+  .label {
+    display: flex;
+    flex-flow: row nowrap;
+    width: 100%;
+    height: 100%;
+
+    > img {
+      object-fit: cover;
+    }
+  }
 }
