unselected game badges suggestion

--- a/src/components/Badges/Badges.module.scss
+++ b/src/components/Badges/Badges.module.scss
@@ -44,4 +44,15 @@
       align-self: flex-end;
     }
   }
+
+  .suggestion {
+    display: grid;
+    place-items: center;
+    width: calc(100% - 30px);
+    padding: 15px;
+    font-size: 24px;
+    border: 1px dashed grey;
+    background-color: #f2f2f2;
+    opacity: 0.9;
+  }
 }
