Reset all button functionality

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -15,5 +15,10 @@
   .buttons {
     display: flex;
     gap: 8px;
+
+    .clear {
+      background-color: red;
+      color: #ffffff;
+    }
   }
 }
