--- a/src/components/Encounters/Encounters.module.scss
+++ b/src/components/Encounters/Encounters.module.scss
@@ -1,7 +1,8 @@
 .table {
   display: flex;
   flex-flow: column nowrap;
-  gap: 10px;
+  flex: 1;
+  min-height: 0;
   border-radius: 3px;
   border: 1px solid black;
 
@@ -20,5 +21,12 @@
       background-color: #d46a6a;
       color: #ffffff;
     }
+  }
+
+  .list {
+    display: flex;
+    flex-flow: column nowrap;
+    flex: 1;
+    overflow: auto;
   }
 }
