File name fixes, remaining pokemon pictures implemented into constant array, galarian and alolan pokemon versiones, pokemon autocomplete style fix

--- a/src/components/Pokemon/Pokemon.module.scss
+++ b/src/components/Pokemon/Pokemon.module.scss
@@ -1,6 +1,6 @@
 .pokemonSelect {
   height: 30px;
-  width: 215px;
+  width: 100%;
 
   :global(.MuiInputLabel-outlined) {
     transform: translate(14px, 10px) scale(1);
