--- a/src/components/Encounters/Encounters.module.scss
+++ b/src/components/Encounters/Encounters.module.scss
@@ -15,6 +15,7 @@
     align-items: center;
     grid-template-columns: repeat(3, 1fr) auto;
     grid-template-rows: 100%;
+    column-gap: 10px;
     padding: 10px;
     &.tableHeader {
       background-color: #d46a6a;
