Finished up badge pictures for all games and level caps

--- a/src/components/Badges/Badges.module.scss
+++ b/src/components/Badges/Badges.module.scss
@@ -40,6 +40,12 @@
       border-right: none;
     }
 
+    > img {
+      max-height: 50px;
+      max-width: 50px;
+      object-fit: cover;
+    }
+
     .levelCap {
       align-self: flex-end;
     }
