Initial darkmode implementaiton

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -7,6 +7,23 @@
   .gameSelect {
     width: 300px;
 
+    :global(.MuiInput-root) {
+      color: var(--contrast);
+      border-bottom-color: var(--contrast);
+    }
+
+    :global(.MuiInput-underline:before) {
+      border-bottom-color: var(--contrast);
+    }
+
+    :global(.MuiSelect-icon) {
+      color: var(--contrast);
+    }
+
+    :global(.MuiFormLabel-root) {
+      color: var(--contrast);
+    }
+
     input {
       padding: 0 !important;
     }
