--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -4,13 +4,17 @@
   width: 100%;
 
   .appBar {
-    background-color: #801515;
+    background-color: var(--app);
     z-index: 1201;
     transition: width 195ms cubic-bezier(0.4, 0, 0.6, 1) 0ms,
       margin 195ms cubic-bezier(0.4, 0, 0.6, 1) 0ms;
 
     .menuIcon {
       margin-right: 36px;
+    }
+
+    .darkIcon {
+      margin-left: auto;
     }
   }
   .appBarShift {
