--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -17,44 +17,33 @@
       margin-left: auto;
     }
   }
-  .appBarShift {
-    margin-left: 240px;
-    width: calc(100% - 240px);
-    transition: width 225ms cubic-bezier(0.4, 0, 0.6, 1) 0ms,
-      margin 225ms cubic-bezier(0.4, 0, 0.6, 1) 0ms;
-  }
-
-  .drawer {
-    width: 240px;
-    flex-shrink: 0;
-    white-space: nowrap;
-
-    :global(.MuiPaper-root) {
-      background-color: var(--bgsecondary);
-    }
-  }
-
-  .arrowContainer {
-    display: flex;
-    align-items: center;
-    justify-content: flex-end;
-    span {
-      color: var(--contrast);
-    }
-  }
-
-  .open {
-    width: 240px;
-    transition: width 225ms cubic-bezier(0.4, 0, 0.6, 1) 0ms;
-  }
-
-  .close {
-    width: 50px;
-    transition: width 195ms cubic-bezier(0.4, 0, 0.6, 1) 0ms;
-  }
 
   .main {
+    display: flex;
+    flex-flow: column nowrap;
     margin-top: 64px;
+    margin-bottom: 15px;
     flex: 1;
+  }
+
+  .footer {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    background-color: var(--app);
+    color: #ffffff;
+    padding: 2px 0;
+    font-size: 10px;
+
+    @media (max-width: 700px) {
+      font-size: 8px;
+    }
+
+    @media (max-width: 550px) {
+      font-size: 7px;
+    }
   }
 }
