--- a/src/components/Pokemon/Pokemon.module.scss
+++ b/src/components/Pokemon/Pokemon.module.scss
@@ -42,4 +42,11 @@
       object-fit: cover;
     }
   }
+
+  @media (max-width: 550px) {
+    :global(.MuiInputBase-input),
+    :global(.MuiFormLabel-root) {
+      font-size: 12px;
+    }
+  }
 }
