--- a/src/components/Encounters/Encounters.module.scss
+++ b/src/components/Encounters/Encounters.module.scss
@@ -26,6 +26,10 @@
     .delete {
       color: var(--contrast);
     }
+
+    @media (max-width: 550px) {
+      column-gap: 5px;
+    }
   }
 
   .list {
