--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -21,6 +21,7 @@
     flex-flow: column nowrap;
     margin-top: 64px;
     margin-bottom: 15px;
+    width: 100%;
 
     @media (max-width: 500px) {
       margin-top: 58px;
