--- a/src/components/Options/Options.module.scss
+++ b/src/components/Options/Options.module.scss
@@ -31,11 +31,13 @@
     .add {
       background-color: green;
       color: #ffffff;
+      font-weight: bold;
     }
 
     .clear {
-      background-color: red;
-      color: #ffffff;
+      background-color: #cf6679;
+      color: black;
+      font-weight: bold;
     }
   }
 
