--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -1,55 +1,35 @@
 .app {
-  display: flex;
   height: 100vh;
-  width: 100%;
+  background-color: var(--bgprimary);
+  .input {
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    opacity: 0;
+  }
 
-  .appBar {
-    background-color: var(--app);
-    z-index: 1201;
+  .gameSelect {
+    width: 100%;
+    max-width: 300px;
+    background-color: transparent !important;
+    color: var(--contrast) !important;
 
-    .menuIcon {
-      margin-right: 36px;
-    }
-
-    .darkIcon {
-      margin-left: auto;
+    > i {
+      color: var(--contrast);
+      top: 0 !important;
     }
   }
 
-  .main {
+  :global(.button) {
+    box-shadow: none !important;
+  }
+
+  .container {
+    height: calc(100% - 42px);
+  }
+
+  .modalContent {
     display: flex;
     flex-flow: column nowrap;
-    margin-top: 64px;
-    margin-bottom: 15px;
-    width: 100%;
-
-    @media (max-width: 500px) {
-      margin-top: 58px;
-    }
-  }
-
-  .footer {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    position: fixed;
-    bottom: 0;
-    width: 100%;
-    background-color: var(--app);
-    color: #ffffff;
-    padding: 2px 0;
-    font-size: 10px;
-
-    @media (max-width: 700px) {
-      font-size: 8px;
-    }
-
-    @media (max-width: 550px) {
-      font-size: 7px;
-    }
-
-    @media (max-width: 500px) {
-      font-size: 5px;
-    }
   }
 }
