--- a/src/components/Tracker/Tracker.module.scss
+++ b/src/components/Tracker/Tracker.module.scss
@@ -2,10 +2,9 @@
   display: grid;
   place-items: center;
   grid-template-columns: minmax(0, 1fr);
-  height: calc(100% - 40px);
-  width: calc(100% - 40px);
+  grid-template-rows: minmax(0, 1fr);
+  height: 100%;
   padding: 20px;
-  background-color: var(--bgprimary);
 
   @media (max-width: 500px) {
     padding: 0;
@@ -17,9 +16,9 @@
     display: flex;
     flex-flow: column nowrap;
     gap: 5px;
-    height: calc(100% - 20px);
+    width: 100%;
+    height: 100%;
     min-height: 0;
-    width: calc(100% - 20px);
     padding: 10px;
     max-width: 1200px;
     background-color: var(--bgsecondary);
