--- a/src/components/Status/Status.module.scss
+++ b/src/components/Status/Status.module.scss
@@ -1,6 +1,7 @@
 .statusSelect {
   width: 100%;
   background-color: transparent !important;
+  border-color: var(--contrast) !important;
 
   > div {
     color: var(--contrast) !important;
@@ -13,4 +14,11 @@
   @media (max-width: 550px) {
     font-size: 11px;
   }
+}
+
+.label {
+  display: flex;
+  align-items: center;
+  gap: 25px;
+  font-weight: bold;
 }
