--- a/src/components/Encounters/Encounters.module.scss
+++ b/src/components/Encounters/Encounters.module.scss
@@ -25,7 +25,7 @@
       text-overflow: ellipsis;
       overflow: hidden;
       font-weight: bold;
-      max-width: calc(100% - 20px);
+      max-width: calc(100% - 70px);
       height: 20px;
       min-height: 20px;
     }
@@ -34,6 +34,13 @@
       position: absolute;
       top: 5px;
       right: 5px;
+      font-size: 12px;
+    }
+
+    .reset {
+      position: absolute;
+      top: 5px;
+      right: 40px;
       font-size: 12px;
     }
   }
