New version functionality

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -42,4 +42,10 @@
     display: flex;
     flex-flow: column nowrap;
   }
+
+  .newVersion {
+    :global(.text) {
+      background-color: #ffffcc;
+    }
+  }
 }
