--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -49,3 +49,13 @@
     }
   }
 }
+
+.github {
+  width: 48px;
+  height: 48px;
+  min-height: 48px !important;
+  min-width: 48px !important;
+  font-size: 32px !important;
+  padding: 0 !important;
+  align-self: center;
+}
