Contact section for form submission

--- a/src/components/BadgeEditor/BadgeEditor.module.scss
+++ b/src/components/BadgeEditor/BadgeEditor.module.scss
@@ -1,9 +1,9 @@
 .button {
-  background-color: transparent;
+  background-color: transparent !important;
   color: var(--contrast) !important;
 
   &:hover {
-    background-color: transparent;
+    background-color: transparent !important;
     color: var(--contrast) !important;
   }
 }
