PWA icon adjustments, accessibility fixes for pokemon imges and github link

--- a/src/components/Pokemon/Pokemon.module.scss
+++ b/src/components/Pokemon/Pokemon.module.scss
@@ -11,6 +11,15 @@
     top: 0 !important;
   }
 
+  :global(search) {
+    color: var(--contrast);
+  }
+
+  :global(.ui.image) {
+    width: 37.5px !important;
+    height: 28px;
+  }
+
   @media (max-width: 550px) {
     font-size: 11px;
   }
