--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -102,19 +102,25 @@
       display: flex;
       align-items: center;
       justify-content: center;
-      width: 48px;
-      min-width: 48px;
       height: 48px;
+      padding: 5px;
       min-height: 26px;
       font-size: 26px;
-      padding-top: 5px;
-      padding-left: 5px;
       border: 2px solid #ffffff;
-      border-radius: 50%;
+      border-radius: 4px;
       color: #ffffff;
+      position: relative;
+      > i {
+        padding-top: 2px;
+      }
       &:hover {
         background-color: #ffffff;
         color: black;
+      }
+
+      > span {
+        bottom: -5px;
+        font-size: 12px;
       }
     }
   }
