--- a/src/components/Pokestats/Pokestats.module.scss
+++ b/src/components/Pokestats/Pokestats.module.scss
@@ -33,6 +33,7 @@
     }
     :global(.ui.secondary.menu .active) {
       background-color: var(--card);
+      transition: all 500ms;
     }
 
     :global(.ui.secondary.menu .item) {
