--- a/src/components/Rules/Rules.module.scss
+++ b/src/components/Rules/Rules.module.scss
@@ -47,6 +47,7 @@
     padding: 10px;
     color: var(--contrast);
     background-color: var(--card);
+    transition: all 500ms;
     box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
     border-radius: 3px;
     position: relative;
