--- a/src/components/Encounters/Encounters.module.scss
+++ b/src/components/Encounters/Encounters.module.scss
@@ -15,6 +15,7 @@
     padding: 10px;
     color: var(--contrast);
     background-color: var(--card);
+    transition: all 500ms;
     border-radius: 3px;
     position: relative;
     box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
