--- a/src/components/Tracker/Tracker.module.scss
+++ b/src/components/Tracker/Tracker.module.scss
@@ -14,6 +14,7 @@
     min-height: 0;
     max-width: 1200px;
     background-color: var(--bgsecondary);
+    transition: all 500ms;
     border-radius: 3px;
 
     @media (max-width: 500px) {
